# ansible-collection-meta

./: .gitignore  CHANGELOG.md  README.md  galaxy.yml  pyproject.toml
playbooks/: contributing.yml  docs.yml  license.yml  meta.yml  meta_main.yml  meta_requirements.yml  readme.yml  remove.yml
playbooks/templates/: CONTRIBUTING.md.j2  README.md.j2  meta_main.yml.j2  meta_requirements.yml.j2
plugins/: README.md
plugins/filter/: common.py
plugins/inventory/: ansible_role_chroot_inventory.py  ansible_role_inventory.py
plugins/lookup/: github_version.py
plugins/modules/: fetch_github_repos.py  generate_argument_specs.py
tests/integration/targets/generate_argument_specs/: test_generate_argument_specs.yml
tests/integration/targets/generate_argument_specs/defaults/: main.yml
