[project]
name = "ansible-collection-dev"
version = "0.2.1"
description = "Ansible collection supporting development tasks for Ansible roles."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["ansible", "collection", "roles", "development", "modules"]
repository = "https://github.com/jam82/ansible-collection-dev"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_variables = [
    "galaxy.yml:version",
]
version_toml = [
    "pyproject.toml:project.version",
]
